# pond_navegacao

./: README.md
install/: local_setup.sh  setup.sh
install/cg/share/cg/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/cg_interfaces/share/cg_interfaces/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/cg_interfaces/share/cg_interfaces/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  cg_interfacesConfig.cmake  cg_interfaces__rosidl_typesupport_cExport-noconfig.cmake  cg_interfaces__rosidl_typesupport_cExport.cmake  cg_interfaces__rosidl_typesupport_cppExport-noconfig.cmake  cg_interfaces__rosidl_typesupport_cppExport.cmake  cg_interfaces__rosidl_typesupport_introspection_cExport-noconfig.cmake  cg_interfaces__rosidl_typesupport_introspection_cExport.cmake  cg_interfaces__rosidl_typesupport_introspection_cppExport-noconfig.cmake  cg_interfaces__rosidl_typesupport_introspection_cppExport.cmake  export_cg_interfaces__rosidl_generator_cExport-noconfig.cmake  export_cg_interfaces__rosidl_generator_cExport.cmake  rosidl_cmake-extras.cmake  (+9 more)
install/ponderada/share/ponderada/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
log/: latest_build
src/maps/: default.csv
src/src/ponderada/: CMakeLists.txt  package.xml
src/src/ponderada/src/: astar_navigation.cpp  astart_navigation.cpp  navigation.cpp
(+42 files in other folders)
