<?xml version="1.0"?>
<package format="3">
  <name>ponderada</name>
  <version>0.0.1</version>
  <description>Pacote para navegação do robô utilizando o algoritmo A* com ROS2</description>

  <maintainer email="email@email.com">Rafa</maintainer>

  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cg_interfaces</exec_depend>
  
  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
